--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,12 @@
     <title><%= title %></title>
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
-  </head>
+	<%= stylesheet_link_tag 'application' %>
+	<%= javascript_include_tag "application" %>
+ </head>
   <body>
     <div class="container">
-	  <%= render 'layouts/header' %>
+	 <%= render 'layouts/header' %>
       <section class="round">
         <%= yield %>
       </section>
