--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,22 @@
-<h1>Cam Fortin's Homemade Rails App</h1>
+<h1>cam's web app in progress'</h1>
 
-<p>One day this app will display my photos and blog posts on things I learn while on the job at wine.com as a product manager and analytics ninja.<p>
-	
+<p>one day this app will display my photos and blog posts on things i learn while on the job at wine.com as a product manager and analytics ninja.<p>
+
+<dl class="tabs contained">
+  <dd><a href="#simpleContained1" class="active">ruby on rails</a></dd>
+  <dd><a href="#simpleContained2">look and feel</a></dd>
+  <dd><a href="#simpleContained3">me, elsewhere</a></dd>
+</dl>
+
+<ul class="tabs-content contained">
+  <li class="active" id="simpleContained1Tab">built with ruby on rails, learn more here: <a href="http://railscasts.com/">rails casts</a></li>
+  <li id="simpleContained2Tab">looks so sexy, thanks <a href= "http://foundation.zurb.com/docs/ui.php">foundation</li>
+  <li id="simpleContained3Tab"><a href="http://www.twitter.com/#!/camfortin">@camfortin</a> | <a href="http://www.camfortin.com">my tumblr</a></li>
+</ul>
+
+<div class="panel">
+	<h5>I WISH I WAS HIKING</h5>
+	<p>Or coding...</p>
+</div>
+
 <%= link_to "Join the Community", signup_path, :class => "signup_button round" %>
