--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>cam's web app in progress'</h1>
+<h1>cam's rails web app in progress</h1>
 
 <p>one day this app will display my photos and blog posts on things i learn while on the job at wine.com as a product manager and analytics ninja.<p>
 
